[package]
name = "bevy-lsp"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Bevy engine model language server example using lsp-max"
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
publish = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
clap-noun-verb = "26.6.2"
clap-noun-verb-macros = "26.6.2"
linkme = "0.3"
lsp-max = { path = "../../" }
tokio = { version = "1", features = ["full"] }
tree-sitter-rust = "0.24"

[build-dependencies]
lsp-max-ast-codegen = { path = "../../crates/lsp-max-adapters/lsp-max-ast-codegen" }
tree-sitter-rust = "0.24"
