[package]
name = "clap-noun-verb-lsp"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "clap-noun-verb integration example using lsp-max"
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
clap-noun-verb = "26.6.2"
clap-noun-verb-macros = "26.6.2"
linkme = "0.3"
lsp-max = { path = "../../" }
lsp-max-protocol = { path = "../../lsp-max-protocol" }
lsp-max-macros = { path = "../../lsp-max-macros" }
lsp-types-max = { path = "../../../lsp-types-max", version = "26.6.8", features = ["proposed"] }
tokio = { version = "1.17", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
regex = "1.10"
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"
url = { version = "2.5", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2.2"
predicates = "3.1"
